# PhoenixRender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  design.drawio
Content/Shaders/: NaiveBox.hlsl
source/: Camera.cpp  Camera.h  GlobalContext.cpp  GlobalContext.hpp  GpuBuffer.cpp  GpuBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.h  NaiveBox.h  Pass.cpp  Pass.h  Pipeline.cpp  Pipeline.h  RenderCore.cpp  RenderCore.hpp  RenderPass.cpp  RenderPass.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  View.cpp  View.h  main.cpp
source/Containers/: fx_unordered_map.h
source/base/: FXCommon.h  FXMath.h
source/render/: fx_err.cpp  fx_err.h
source/shaders/: NaiveBox.hlsl
